# CodeOrbit-Client

./: .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json
design-source/: README.md  brand-spec.md  open-design-app.css
scripts/: build-android-release.ps1
src/: App.vue  main.ts  runtimeApi.ts  targetStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/keepalive/: Cargo.toml  build.rs
src-tauri/plugins/keepalive/android/: .gitignore  build.gradle.kts  consumer-rules.pro
src-tauri/plugins/keepalive/android/src/main/: AndroidManifest.xml
src-tauri/plugins/keepalive/android/src/main/java/com/codeorbit/keepalive/: KeepAlivePlugin.kt  KeepAliveService.kt
src-tauri/plugins/keepalive/android/src/main/res/drawable/: ic_stat_notify.xml
src-tauri/plugins/keepalive/permissions/: default.toml
src-tauri/plugins/keepalive/permissions/autogenerated/: reference.md
src-tauri/plugins/keepalive/permissions/autogenerated/commands/: keep_alive_start.toml  keep_alive_stop.toml  keep_alive_update.toml  pending_alert_clear.toml  pending_alert_notify.toml
src-tauri/plugins/keepalive/permissions/schemas/: schema.json
src-tauri/plugins/keepalive/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.vue
src/composables/: useRuntimeConnection.ts
src/shell/: AppShell.vue  StatusChip.vue  TabBar.vue  TopBar.vue
src/styles/: app.css  tokens.css
src/utils/: keepAlive.ts  markdown.ts  motion.ts
(+4 files in other folders)
